# weather_agent

./: pyproject.toml
src/myapp/: agent.py  chatbot.py  main.py  script.py  simag.py
